[metadata]
name = future_breakpoint
version = 2.0.0
description = A backport of `breakpoint` to python<3.7
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/future-breakpoint
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6.1
